Making user role 'WORKER' manageable from the admin